@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Reduced the data transfer in the object `RlzsAssoc` and improved the
+    postprocessing of hazard curves when the option `--hc` is given
   * Improved the help message of the command `oq purge`
   * Added a `@reader` decorator to mark tasks reading directly from the
     file system
